<resources>
    <string name="app_name">Albassami Logistics </string>
    <string name="map_api">AIzaSyBmDoXeZzTRiulad3IZ1mBGpr_VVU5yzfQ</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email*</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password">Password*</string>
    <string name="welcome_to_albassami_assistance">Welcome to Albassami assistance!</string>
    <string name="to_complete_your_order_you_have_to_login">to complete your order you have to login</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password*</string>
    <string name="by_proceeding_you_also_agree_to_the_terms_of_service_and_privacy_policy">By proceeding you also agree to the Terms of Service and Privacy Policy</string>
    <string name="already_have_an_account_sign_in"><![CDATA[Already have an account?<b><font color=#FF0000> Sign in</font></b>]]></string>
    <string name="send_email">Send Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="door_lock">Door lock</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maintenance">Maintenance</string>
    <string name="battery">Battery</string>
    <string name="gas">Gas</string>
    <string name="oil">Oil</string>
    <string name="tire">Tire</string>
    <string name="towing">Towing</string>
    <string name="doorLockFragment">doorLockFragment</string>
</resources>
